# closcall

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
artifacts/manifests/: gate12_5-dataset-v3.json  gate9-dataset.json
configs/: application.yaml  metrics.yaml  models.yaml  safety-policy.yaml  traffic-profiles.yaml
deployments/gnmic/: gnmic.yaml
deployments/prometheus/: prometheus.yml
docs/: DATA_CARD.md  LIMITATIONS.md  MODEL_CARD.md  RESULTS.md  TRACEABILITY.md  backlog.md  threat-model.md  toolchain.md
docs/decisions/: ADR-000-template.md  ADR-001-scope-waivers.md  ADR-002-lab-runtime-boundary.md  ADR-003-containerlab-dood-socket.md  ADR-004-h07-precheck-wiring-waiver.md  ADR-005-browser-cookie-jwt-transport.md
evals/protocols/: b09-ecmp.md  corpus-preregistration.md
evals/reports/: gate10-llm.txt  gate10-status.md  gate11-progress.txt  gate11-status.md  gate12-evaluation.md  gate12-nika.txt  gate12-progress.txt  gate12-status.md  gate12_5-ablation.txt  gate12_5-detection-v3.txt  gate12_5-evaluation.md  gate12_5-exit-criteria.txt  gate12_5-localization-cv.txt  gate12_5-localization-v1.txt  gate12_5-localization-v2.txt  gate12_5-preregistration.txt  gate12_5-progress.txt  gate3-run1.txt  gate3-run2.txt  gate4-telemetry.txt  gate6-slice.txt  gate7-corpus.txt  gate7-db.txt  gate8-corpus-progress.txt  gate8-corpus.txt  gate9-detection-status.md  gate9-detection.txt  gate9-localization.txt  localization-v3.txt
lab/: fabric.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_evaluation_and_roles.py  0003_app_users.py
planning/: 01-Project-Spec.md  02-Build-Bible.md  03-Canonical-Execution-Bible.md  04-Data-API-and-State-Contracts.md  05-Acceptance-Matrix.md
research/: research-log.md  source-register.md
runbooks/: operator-guide.md
scripts/: api_demo_seed.py  api_seed.py  api_serve.py  api_smoke.py  b09_ecmp.py  b10_b11_convergence.py  b12_teardown.py  bench_2s4l_NONCANONICAL.py  capture_baseline.py  clab.sh  consolidate_eval.py  consolidate_eval_v3.py  corpus_pilot.py  corpus_run.py  corpus_run_v3.py  corpus_status.py  corpus_verify.py  db_isolation_check.py  demo.py  doctor.py  emit_manifest.py  emit_manifest_v3.py  evaluate_localization.py  evaluate_sensors.py  evaluate_sensors_v3.py  fault_smoke.py  gate12_5_exit_check.py  gate12_5_impaired_probe.py  gate12_5_localization_ablation.py  gate12_5_localization_cv.py  gate3_accept.py  gen_pki.py  gen_readme_tables.py  lab_check.py  measure_convergence.py  qualify_llm.py  telemetry_check.py  traffic_smoke.py  validate_srl_configs.py  vertical_slice.py
src/closcall/api/: adapters.py  app.py  approval.py  auth.py  charts.py  dashboard.py  gates.py  ui.py  ui_repo.py
src/closcall/chaos/: faults.py  ledger.py
src/closcall/config/: __init__.py  settings.py
src/closcall/datasets/: features.py  graph.py  manifest.py  schemas.py  splits.py  (+1 more)
tests/unit/: test_adapters.py  test_api.py  test_auth.py  test_claims.py  test_config.py  test_counters.py  test_dataset_schemas.py  test_detection.py  test_diagnose.py  test_fabric_ipam.py  test_fabric_validate.py  test_features.py  test_graph.py  test_ledger.py  test_llm.py  test_logging.py  test_manifest.py  test_prechecks.py  test_render_determinism.py  test_report.py  test_rollback_audit.py  test_sensors.py  test_slice_diagnose.py  test_splits.py  test_syslog.py  test_telemetry_window.py  test_tools.py  test_traffic.py  test_ui.py
(+39 files in other folders)
