[project]
name = "closcall"
version = "0.1.0"
description = "Evidence-grounded incident command for AI datacenter fabrics"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
dependencies = [
    # Pydantic v2 is the canon-locked typed-contract layer (Bible §4);
    # pydantic-settings is its env-loading companion used for the CLOSCALL_ config loader.
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # YAML is the canon's config format (fabric.yaml, configs/*.yaml, Bible §5); PyYAML parses it.
    "pyyaml>=6.0",
    # Persistence (Bible §4): SQLAlchemy 2 + Alembic + asyncpg on PostgreSQL 16.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "greenlet>=3.0", # required by SQLAlchemy async (run_sync)
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.13",
    "pytest>=8.2",
    "hypothesis>=6.100",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/closcall"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["closcall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
