[project]
name = "closcall"
version = "0.1.0"
description = "Evidence-grounded incident command for AI datacenter fabrics"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
dependencies = [
    # Pydantic v2 is the canon-locked typed-contract layer (Bible §4);
    # pydantic-settings is its env-loading companion used for the CLOSCALL_ config loader.
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # YAML is the canon's config format (fabric.yaml, configs/*.yaml, Bible §5); PyYAML parses it.
    "pyyaml>=6.0",
    # Persistence (Bible §4): SQLAlchemy 2 + Alembic + asyncpg on PostgreSQL 16.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "greenlet>=3.0", # required by SQLAlchemy async (run_sync)
    "pyarrow>=24.0.0",
    "fastapi>=0.139.0",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.13.0",
    # Gate 14 browser UI (Bible-scoped lightweight: server-rendered, no SPA).
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",  # form posts for the login/approve views
    "numpy>=2.5.1",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.13",
    "pytest>=8.2",
    "hypothesis>=6.100",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/closcall"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses these calls in argument defaults by design (not B008).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["closcall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
